# cursor-trail

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  CursorTrail.sln  README.md  WINDOWS11_FIX.md  config-dense.ini  config-large.ini  config-minimal.ini  config-rainbow.ini  config.ini
.github/workflows/: build-windows.yml
CursorTrail/: Config.cpp  Config.h  CursorTrail.cpp  CursorTrail.vcxproj  CursorTrail.vcxproj.filters  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  TrailPart.cpp  TrailPart.h  WindowsOverlay.cpp  WindowsOverlay.h  sprite.frag
CursorTrail/Debug/: CursorTrail.exe.recipe  CursorTrail.ilk  vc142.idb
CursorTrail/Debug/CursorTrail.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CursorTrail.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CursorTrail/Release/: CursorTrail.exe.recipe
CursorTrail/include/glad/: glad.h
CursorTrail/lib/: glad.c  glfw3.lib
